--- a/lnbCont_03.html
+++ b/lnbCont_03.html
@@ -1,7 +1,9 @@
 <!-- 출력되는 기본 구조 -->
 <div class="headArea">
 	<h2>메뉴제목이 들어가는곳 menuCont03</h2>
-	<button type="button" class="close" onClick="javascript:hideLnbCont(this);"><span class="hidden">닫기</span></button>
+	<button type="button" class="close" onClick="javascript:hideLnbCont(this);">
+		<i class="ambicon-015_mark_times"></i><span class="hidden">닫기</span>
+	</button>
 </div>
 <div class="bodyArea">
 	<div class="" style="height:800px;">
