--- a/z_modalTest_full.html
+++ b/z_modalTest_full.html
@@ -1,4 +1,10 @@
 <script>
+	//로그인 modal
+	$('#testBtn').on('click', function(e) {	
+		var param = new Object();
+		//commonPopup2('url', 'param', 'width');
+		commonPopup2('z_modalTest.html', '', '300');
+	});
 </script>
 <div class="modal-dialog" role="document">
 	<div class="modal-content">
