--- a/lnbCont_01.html
+++ b/lnbCont_01.html
@@ -20,7 +20,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr0" name="addr" disabled />
 							<label for="addr0" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -29,7 +29,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr1" name="addr" />
 							<label for="addr1" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -38,7 +38,7 @@
 				<tr>
 					<td class="ellipsis">말줄임이 필요할대는 class="ellipsis" 추가 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr2" name="addr" />
 							<label for="addr2" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -49,7 +49,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr3" name="addr" />
 							<label for="addr3" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -58,7 +58,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr4" name="addr" />
 							<label for="addr4" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -67,7 +67,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr5" name="addr" />
 							<label for="addr5" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -76,7 +76,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr6" name="addr" />
 							<label for="addr6" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -85,7 +85,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr7" name="addr" />
 							<label for="addr7" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -94,7 +94,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr8" name="addr" />
 							<label for="addr8" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -103,7 +103,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr9" name="addr" />
 							<label for="addr9" class="labelCh"><em class="text">선택</em></label>
 						</span>
@@ -112,7 +112,7 @@
 				<tr>
 					<td class="">서울시 송파구 무슨동 어떤거리 00 건물명 서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000 서울시 송파구 무슨동 어떤거리 00 건물명 상세주소0000000</td>
 					<td class="right">
-						<span class="radio block">
+						<span class="rdchBox block">
 							<input type="radio" id="addr10" name="addr" />
 							<label for="addr10" class="labelCh"><em class="text">선택</em></label>
 						</span>
