--- a/z_modalTest_full.html
+++ b/z_modalTest_full.html
@@ -5,11 +5,18 @@
 		//commonPopup2('url', 'param', 'width');
 		commonPopup2('z_modalTest.html', '', '300');
 	});
+
+	//로그인 modal
+	$('#testBtn2').on('click', function(e) {
+		var param = new Object();
+		//commonPopup2('url', 'param', 'width');
+		commonPopup('z_modalTest.html', '', '300');
+	});
 </script>
 <div class="modal-dialog" role="document">
 	<div class="modal-content">
 		<div class="modal-header">
-			<h5 class="modal-title">Modal title</h5>
+			<h2 class="modal-title">Modal title</h2>
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<i class="ambicon-015_mark_times"></i><span class="hidden">닫기</span>
 			</button>
@@ -17,7 +24,12 @@
 		<div class="modal-body">
 			<div style="height:800px;">Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.
 			<br/><br/>
-			<a class="" id="testBtn">모달에서 모달 띄우기 테스트</a>
+			<a href="#" id="testBtn" class="btnstyle middle blue" >모달에서 모달 띄우기 테스트</a>
+
+			<br/><br/>
+
+
+			<a href="#" id="testBtn2" class="btnstyle middle blue" >자기 자신교체 띄우기 테스트</a>
 			</div>
 		</div>
 		<div class="modal-footer">
