20180129업테이트수정

--- a/lnbCont_01.html
+++ b/lnbCont_01.html
@@ -1,3 +1,5 @@
+
+
 <!-- 출력되는 기본 구조 -->
 <div class="headArea">
 	<h2>메뉴제목이 들어가는곳 menuCont01</h2>
@@ -125,6 +127,5 @@
 	</div>
 </div>
 <div class="footArea">
-	<!--<button type="button" class="btnstyle middle blue">검색</button>-->
-	<button type="button" class="btnstyle middle gray" onClick="javascript:hideLnbCont(this);">닫기</button>
+	<button type="button" class="btnstyle middle blue" onClick="">지도이동</button>
 </div>
