--- a/lnbCont_05.html
+++ b/lnbCont_05.html
@@ -1,3 +1,19 @@
+<script type="text/javascript">
+$(document).ready( function() {
+	$('#heatMapBtn_show').on('click', function() {
+		//해당 엑션
+		$(this).hide();
+		$('#heatMapBtn_hide').show();
+	});
+
+	$('#heatMapBtn_hide').on('click', function() {
+		//해당 엑션
+		$(this).hide();
+		$('#heatMapBtn_show').show();
+	});
+});
+</script>
+
 <!-- 출력되는 기본 구조 -->
 <div class="headArea">
 	<h2>HeatMap 보기</h2>
@@ -7,12 +23,6 @@
 </div>
 <div class="bodyArea">
 	<ul class="heatmapList" style="">
-		<li>
-			<span class="rdchBox block">
-				<input type="radio" id="hitmap1" name="hitmap" />
-				<label for="hitmap1" class="labelCh"><em class="text">heatmap 끄기</em></label>
-			</span>
-		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="radio" id="hitmap2" name="hitmap" />
@@ -52,30 +62,23 @@
 		<li>
 			<span class="rdchBox block">
 				<input type="radio" id="hitmap8" name="hitmap" disabled />
-				<label for="hitmap8" class="labelCh"><em class="text">개발행위허가면적</em></label>
+				<label for="hitmap8" class="labelCh"><em class="text">보상편입물건면적</em></label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="radio" id="hitmap9" name="hitmap" disabled />
-				<label for="hitmap9" class="labelCh"><em class="text">개발행위허가면적 증가율</em></label>
+				<label for="hitmap9" class="labelCh"><em class="text">보상편입물건면적 증가율</em></label>
 			</span>
 		</li>
-		<li>
-			<span class="rdchBox block">
-				<input type="radio" id="hitmap10" name="hitmap" disabled />
-				<label for="hitmap10" class="labelCh"><em class="text">개발사업면적</em></label>
-			</span>
-		</li>
-		<li>
-			<span class="rdchBox block">
-				<input type="radio" id="hitmap11" name="hitmap" disabled />
-				<label for="hitmap11" class="labelCh"><em class="text">HP등급</em></label>
-			</span>
-		</li>
+
 	</ul>
 </div>
+<div class="footerEtcText">
+	<div class="tit">[알림]</div>
+	<div class="cont">HeatMap은 전국 3800만여 필지에 대한 데이터를 실시간 분석하기 때문에 다소 시간이 소요됩니다.(컴퓨터 사용 환경에 따라 차이가 있으며, 5~20초 가량이 소요됩니다.)</div>
+</div>
 <div class="footArea">
-	<!--<button type="button" class="btnstyle middle blue">적용</button>-->
-	<button type="button" class="btnstyle middle gray" onClick="javascript:hideLnbCont(this);">닫기</button>
+	<button type="button" id="heatMapBtn_show" class="btnstyle middle blue" onClick="">HeatMap보기</button>
+	<button type="button" id="heatMapBtn_hide" class="btnstyle middle gray" style="display:none;" onClick="">HeatMap끄기</button>
 </div>
