--- a/01_01_login.html
+++ b/01_01_login.html
@@ -29,7 +29,7 @@ $(document).ready( function() {
 					<input type=""text class="inp id"  placeholder="아이디"  />
 					<input type="password" class="inp pw"  placeholder="비밀번호"  />
 
-					<button type="button" class="btnLogin" >LOGIN</button>
+					<button type="button" class="btnLogin" onclick="javascript:loginAction()" data-dismiss="modal">LOGIN</button>
 				</form>
 
 				<div class="joinLink">
