--- a/lnbCont_04.html
+++ b/lnbCont_04.html
@@ -1,15 +1,63 @@
 <!-- 출력되는 기본 구조 -->
 <div class="headArea">
-	<h2>메뉴제목이 들어가는곳 menuCont04</h2>
+	<h2>물건 보기</h2>
 	<button type="button" class="close" onClick="javascript:hideLnbCont(this);">
 		<i class="ambicon-015_mark_times"></i><span class="hidden">닫기</span>
 	</button>
 </div>
 <div class="bodyArea">
-	<div class="" style="height:800px;">
-	</div>
+	<ul class="mulgunList">
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun1" name="" />
+				<label for="mulgun1" class="labelCh"><em class="text">경매</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun2" name="" />
+				<label for="mulgun2" class="labelCh"><em class="text">공매</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun3" name="" />
+				<label for="mulgun3" class="labelCh"><em class="text">등록매물</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun4" name="" />
+				<label for="mulgun4" class="labelCh"><em class="text">보상물건</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun5" name="" />
+				<label for="mulgun5" class="labelCh"><em class="text">편입물건</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun6" name="" />
+				<label for="mulgun6" class="labelCh"><em class="text">실거래가</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun7" name="" />
+				<label for="mulgun7" class="labelCh"><em class="text">건축허가</em></label>
+			</span>
+		</li>
+		<li>
+			<span class="rdchBox block">
+				<input type="checkbox" id="mulgun8" name="" />
+				<label for="mulgun8" class="labelCh"><em class="text">영업허가</em></label>
+			</span>
+		</li>
+	</ul>
 </div>
 <div class="footArea">
-	<button type="button" class="btnstyle middle blue">검색</button>
-	<button type="button" class="btnstyle middle gray" onClick="javascript:hideLnbCont(this);">닫기</button>
+	<button type="button" class="btnstyle middle blue">물건보기</button>
+	<!--<button type="button" class="btnstyle middle gray" onClick="javascript:hideLnbCont(this);">닫기</button>-->
 </div>
