--- a/z_modalTest.html
+++ b/z_modalTest.html
@@ -1,3 +1,11 @@
+<script>
+	//alert modal test
+	$('#alert02').on('click', function(e) {
+		var param = new Object();
+		//alertPopup('url', 'param', 'width');
+		alertPopup('00_01_alert.html', '', '');
+	});
+</script>
 <div class="modal-dialog" role="document">
 	<div class="modal-content">
 		<div class="modal-header">
@@ -9,6 +17,9 @@
 		<div class="modal-body">
 			<div style="height:700px;">Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.Modal body text goes here.
 			<br/><br/>
+
+			<br/><br/>
+			<a href="#" id="alert02" class="btnstyle middle blue" >alert 띄울때</a>
 			</div>
 		</div>
 		<div class="modal-footer">
