20160206 중간업데이트

--- a/lnbCont_04.html
+++ b/lnbCont_04.html
@@ -10,43 +10,43 @@
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun1" name="" />
-				<label for="mulgun1" class="labelCh"><em class="text">경매</em></label>
+				<label for="mulgun1" class="labelCh"><em class="text">경매</em>  [<i class="icon"><img src="img/marker/gyeongmae.png"></i>]</label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun2" name="" />
-				<label for="mulgun2" class="labelCh"><em class="text">공매</em></label>
+				<label for="mulgun2" class="labelCh"><em class="text">공매</em> [<i class="icon"><img src="img/marker/gongmae.png"></i>]</label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun3" name="" />
-				<label for="mulgun3" class="labelCh"><em class="text">등록매물</em></label>
+				<label for="mulgun3" class="labelCh"><em class="text">등록매물</em> [<i class="icon"></i>]</label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun4" name="" />
-				<label for="mulgun4" class="labelCh"><em class="text">보상물건</em></label>
+				<label for="mulgun4" class="labelCh"><em class="text">보상물건</em> [<i class="icon"><img src="img/marker/bosang.png"></i>]</label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun5" name="" />
-				<label for="mulgun5" class="labelCh"><em class="text">편입물건</em></label>
+				<label for="mulgun5" class="labelCh"><em class="text">편입물건</em> [<i class="icon"><img src="img/marker/pyeonib.png"></i>]</label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun6" name="" />
-				<label for="mulgun6" class="labelCh"><em class="text">실거래가</em></label>
+				<label for="mulgun6" class="labelCh"><em class="text">실거래가</em> [<i class="icon"><img src="img/marker/silgeolae.png"></i>]</label>
 			</span>
 		</li>
 		<li>
 			<span class="rdchBox block">
 				<input type="checkbox" id="mulgun7" name="" />
-				<label for="mulgun7" class="labelCh"><em class="text">건축허가</em></label>
+				<label for="mulgun7" class="labelCh"><em class="text">건축허가</em> [<i class="icon"><img src="img/marker/acceptbuilding.png"></i>] [<i class="icon level"><img src="img/level/25m.png"></i>]</label>
 			</span>
 		</li>
 		<li>
@@ -56,6 +56,18 @@
 			</span>
 		</li>
 	</ul>
+	<div class="mulgunListTerm">
+		<span class="tit">[ 기간선택 ]</span>
+		<select class="inp" style="width:100%;">
+			<option>5년전</option>
+			<option>2년전</option>
+			<option>1년전</option>
+			<option>6개월전</option>
+			<option>3개월전</option>
+			<option>1개월전</option>
+			<option>오늘</option>
+		</select>
+	</div>
 </div>
 <div class="footArea">
 	<button type="button" class="btnstyle middle blue">물건보기</button>
